--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,17 +2,19 @@ body{
   font-style: italic;  
 }
 .main{
-    width:  70%;
+    width:  90%;
     margin: 20px auto;
     border: 1px solid blue;
     padding: 20px;
-    background-color: burlywood;
+    background-color: darkkhaki;
 }
 h2{
     margin-top: 0px;
+    color:chocolate
 }
 .encabezado{
-    background-color: darkcyan;
+    background-color: blueviolet;
+    color: cornsilk;
     padding: 20px;
     margin-bottom: 20px;
     font-size: 30px;
